# sync-mail

./: .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  connection.example.yaml  find_error_plan.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.beads/hooks/: post-commit  pre-commit
.claude/: settings.json
.gemini/: settings.json
docs/: operational-runbook.md
graphify-out/: .graphify_cached.json  .graphify_incremental.json  .graphify_old.json  .graphify_python  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json
logs/: dry-run-20260430_082914.json  dry-run-20260430_082914.txt
mappings/: test_mapping.yaml
plan/: 00-prd.md  01-extract-prd.md  02-extract-master-plan.md  03-add-fitur-dry-run.md  2026-04-30-mandate-graphify-search.md
plan/bug/: 2026-04-29-connection-screen-css-margin-invalid.md  2026-04-29-sync-mail-error.md  2026-04-30-area-publik-check-constraint-status.md  2026-04-30-event-bus-event-attribute-error.md
plan/claude/: 00-master-plan.md  01-setup-foundation.md  02-db-connection.md  (+10 more)
scripts/: check_event_bus_pattern.sh
state/: area_publik_debug.state.json
test_configs/: action_required.yaml  aggregate.yaml  invalid_cast.yaml  valid.yaml
tests/: simulate_crash.py  smoke_tui.py  test_checkpoint.py  test_config_connection.py  test_db_connection.py  test_dry_run.py  test_event_bus_fix.py  test_introspection_auto_yaml.py  test_mapping_loader.py  test_navigation.py  test_orchestrator.py  test_pipeline.py  test_reporting.py  test_transformer.py  test_tui_smoke.py
(+60 files in other folders)
