[project]
name = "sync-mail"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pymysql==1.1.2",
    "sqlalchemy==2.0.49",
    "ruamel.yaml==0.19.1",
    "textual==6.5.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-mock==3.14.0",
]

[project.scripts]
sync-mail = "sync_mail.main:main"
